# Mobile-Game-Simple

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Platform.cpp  Platform.h  Player.cpp  Player.h  main.cpp
